// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Header Renders without exploding from / 1`] = `
<header
  class="jsx-3692150445 header index"
/>
`;

exports[`Component: Header Renders without exploding from /gallery 1`] = `
<header
  class="jsx-3692150445 header gallery"
/>
`;
